corrected fixed footer and added high contrast theme

--- a/css/common.scss
+++ b/css/common.scss
@@ -84,12 +84,16 @@
 /*********************/
 /* Footer definition */
 /*********************/
+footer{
+    min-height:45px;
+}
+
 #common_footer{
     width:100%;
     background:var(--background-accent-color);
-    bottom: 0;
-    position: fixed;
     height: 45px;
+    position:absolute;
+    bottom: 0;
     display:flex;
     border-color:var(--border-color);
     border-top-style:solid;
